Qa4sm 241 update time ranges (#109)
* Revert "updating my fork"

* Updating my fork (#18)

* Update variables.json (#84)

Geophysical range for ESA CCI active changed to 0-100 instead of 0-1.

* Test master (#108)

* Add option to deactivate scaling (#98)

Co-authored-by: Wolfgang Preimesberger <wolfgang.preimesberger@geo.tuwien.ac.at>

* Bug fixing (#99)

* Update versions.json

* Update scheme.css

some styling added so that filter descriptions for smos don't cause a shift in the question mark sign

* Update filter_checkbox_option.html

Comment removed

* Ismn dialog window (#100)

* Qa4sm 389 ismn dialog window (#80)

* Revert "updating my fork"

* a bug fixed - default depth values were passed to the database instead of the ones chosen by user

* changed id of a checkbox for parametrized filters and the regular id passed into a hidden field, so that regardless it's disabled filter id is still passed to the database

* label moved before the hidden input, so that styling from css file works properly

* bug fixed: scaling data restored after removal datasets

* necessary filies added

* changed files added

* loading model ISMNNetworks enabled

* improved way of taking dataset name

* Update ismn_dialog.html

toggleISMNContinent function removed from depth selection

Co-authored-by: sheenaze <tercjak@awst>

* Update and rename 0021_ismnnetworks.py to 0023_ismnnetworks.py

Some cleansing in migration directory so that there were no conflicts

* 0022_auto_20201110_1524 added

migration file from 'no scaling task'

* Delete 0022_merge_20201001_0821.py

Don't need this merge anymore

Co-authored-by: sheenaze <tercjak@awst>

* All data sets on both sides (#101)

* Qa4sm 391 allowing all datasets (#81)

* Revert "updating my fork"

* a bug fixed - default depth values were passed to the database instead of the ones chosen by user

* changed id of a checkbox for parametrized filters and the regul

--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-    <form action="{% url 'validation' %}" method="post" id="validation_form" data-options-url="{% url 'ajax_get_dataset_options' %}" version-options-url="{% url 'ajax_get_version_id' %}">
+    <form action="{% url 'validation' %}" method="post" id="validation_form" data-options-url="{% url 'ajax_get_dataset_options' %}" version-options-url="{% url 'ajax_get_version_id' %}" version-info-url="{% url 'ajax_get_version_info' %}">
         {% csrf_token %}
 
         {% with WIDGET_ERROR_CLASS='is-invalid' %}
@@ -670,7 +670,7 @@
             var datasetId = $(this).val();
             // var datasetName = $(this).text();
             var widgetId = $(this).attr('id');
-            var datasetName = $(`#${widgetId} option[value=${datasetId}]`).text()
+            var datasetName = $(`#${widgetId} option[value=${datasetId}]`).text();
             var filterWidgetId = widgetId.replace(/dataset$/, "filters");
             var paramFilterWidgetId = widgetId.replace(/dataset$/, "parametrised_filters");
             $.ajax({
@@ -687,21 +687,124 @@
                     $(filter_widget).html(return_data['filters']);
                     $(param_filter_widget).html(return_data['paramfilters']);
 
-                    console.log(datasetId, datasetName)
-
                     if(datasetName=='ISMN'){
-                        var default_value = $(version_widget).find('option')[0].value
-                        $('#id_target_hidden_input_version').val(default_value)
+                        var default_value = $(version_widget).find('option')[0].value;
+                        $('#id_target_hidden_input_version').val(default_value);
                     } else{
-                        $('#id_target_hidden_input_version').val('')
-                    }
-
+                        $('#id_target_hidden_input_version').val('');
+                    };
+                    start_ajax_to_set_valiadtion_period();
                 }
             });
 
         }
 
+        function ajax_take_versions_info(versionIds, funcs_set, args_names) {
+          /**
+           * Use ajax to read info of given dataset versions;
+           * @param  {object} versionIds list of version ids
+           * @param  {object} funcs_set  list of name of functions to be called
+           * @param  {object} args_names  list of name of arguments returned by ajax, which are passed to given functions
+           *
+           *
+           Example:
+           ajax_take_versions_info(versionsIds, [func1, func2, func3], [['intervals_from'], ['intervals_to'], ['intervals_from', 'intervals_to']])
+           will call func1 with argument 'intervals_from', func2 with 'intervals_to' and func3 with both of them.
+           Functions passed as a list must accept only one object-like argument.
+          */
+            var url = $("#validation_form").attr("version-info-url");
+            $.ajax({
+                url: url,
+                traditional: true,
+                data: {'version_id': versionIds},
+                success: function (return_data) {
+                  var intervals_from = return_data['intervals_from'];
+                  var intervals_to = return_data['intervals_to'];
+                  // calling functions given in the functions list
+                  ind = 0
+                  for (func in funcs_set){
+                    // taking values of arguments passed in the parameter args_names and creating a list of their values
+                    param_list = get_list_of_params(arguments[0], args_names[ind]);
+                    funcs_set[func](param_list);
+                    ind++;
+                  };
+                }
+            });
+          };
 
+          function get_list_of_params(args, args_names){
+            /**
+             * Returns a list of values assinged to arguments which names are give in args_names;
+             * @param  {object} args list of arguments returned by ajax function: arguments[0]
+             * @param  {object} args_names list of names of arguments returned by the ajax function which should be passed further
+            */
+            param_list = [];
+            for (arg_name in args_names){
+              var name = args_names[arg_name];
+              param_list.push(args[name]);
+            };
+            return param_list
+          };
+
+          function find_current_ids(){
+            // Finds all selects which have 'version' in name attribute
+            var versions_list = $('select[name*=version]');
+            var ids_list = [];
+            for(ind=0; ind<versions_list.length; ind++){
+              var version_id = parseInt(versions_list[ind].value);
+              if (!isNaN(version_id)){
+                ids_list.push(version_id)
+              };
+            };
+            return ids_list;
+          };
+//=========================== Time range related functions =====================================================
+          function convert_date_to_string(date){
+            // Converts date from Date() constructor to date format YYYY-MM-DD
+            var year = date.getFullYear();
+            var month = date.getMonth()+1;
+            if(month<=9){month = '0'+month};
+            var day = date.getDate();
+            if(day<=9){day = '0' + day};
+            return year + '-' + month + '-' + day;
+          };
+
+          function compare_and_set_time_ranges(params){
+            /**
+             * Compares given time ranges and sets the appropriate ones
+                into From and To fields in Validation Period section
+             * @param  {object} params list consisting of two lists: intervals_from and intervals_to
+            */
+
+            // take appropriate elements from params
+            var intervals_from = params[0];
+            var intervals_to = params[1];
+            dates_from = [];
+            dates_to = [];
+            // convert string into date
+            for (ind=0; ind<intervals_from.length; ind++){
+              dates_from.push(new Date(intervals_from[ind]));
+              dates_to.push(new Date(intervals_to[ind]));
+            };
+
+            // get maximum date from and minimum date to
+            var max_date_from = new Date(Math.max.apply(null, dates_from));
+            var min_date_to = new Date(Math.min.apply(null, dates_to));
+
+            //reconvert date to string
+            var max_date_from_str = convert_date_to_string(max_date_from);
+            var min_date_to_str = convert_date_to_string(min_date_to);
+
+            //set appropriate values
+            $('#id_interval_from').val(max_date_from_str);
+            $('#id_interval_to').val(min_date_to_str);
+          }
+
+          function start_ajax_to_set_valiadtion_period(){
+            var versionIds = find_current_ids();
+            ajax_take_versions_info(versionIds, [compare_and_set_time_ranges], [['intervals_from', 'intervals_to']]);
+          }
+//================================================================================
 
         function change_tab_name() {
             var datasetName = $(this).find('option:selected').text();
@@ -711,6 +814,7 @@
 
         {% for dc_form in dc_formset.forms %}
             $("#{{ dc_form.dataset.auto_id }}").change(ajax_change_dataset).change(change_tab_name).change(); // last change() to call change on pageload
+            $("#{{ dc_form.version.auto_id }}").change(start_ajax_to_set_valiadtion_period)
         {% endfor %}
 
         function get_version_id(){
@@ -727,7 +831,8 @@
 
 
         $("#{{ ref_dc_form.dataset.auto_id }}").change(ajax_change_dataset).change(); // last change() to call change on pageload
-        $('#id_ref-version').change(get_version_id)
+        $('#id_ref-version').change(get_version_id).change(start_ajax_to_set_valiadtion_period)
+
 
     </script>
 
@@ -971,6 +1076,7 @@
 
         $('#remove_dc_form').click(function() {
             removeTab('.dc_form', '.dc_form_link', 'datasets',  $('#add_dc_form'), $(this));
+            start_ajax_to_set_valiadtion_period();
         });
 
         function shiftTheButton(obj, buttonSelector){
