Qa4sm 147 calendar (#107)
* Revert "updating my fork"

* datepicker widget added

* all needed png files added

* jquery-ui js and css added

* selecting year and month added

* added function which sets intput field value on change of month and year

* dates settings assing to a variable, some settings added

* default date format restored

* some formatting of a calendar added

* added classes to the root jquery so that the trigger buttons look nice; added margin for the buttons

* button for triggering calendar added and some code cleansing done

Co-authored-by: sheenaze <tercjak@awst>

--- a/validator/static/css/scheme.css
+++ b/validator/static/css/scheme.css
@@ -318,3 +318,22 @@ label[for="depth_to"]{
 label[for="depth_from"]{
     margin-right: .12rem;
 }
+
+button.ui-datepicker-current {
+    display: none;
+}
+
+button.ui-datepicker-close.ui-state-default.ui-priority-primary.ui-corner-all {
+    float: right;
+    font-weight: normal;
+    background: #00AAE3;
+    color: #FFFFFF
+}
+select.ui-datepicker-year, select.ui-datepicker-month {
+  border-radius: 5px;
+  background: #fff;
+}
+button.ui-datepicker-trigger{
+  margin-left: 7px;
+}
+
