--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -1,4 +1,5 @@
 {% extends 'common/base.html' %}
+{% load widget_tweaks %}
 {% load static %}
 
 {% block content %}
@@ -9,15 +10,30 @@
         <h1 class="jumbotron-heading">My validations</h1>
     </div>
 
+    <div class="mb-3">
+      <div class="input-group">
+	<div class="input-group-prepend">
+	  <span class="input-group-text addon-w" id="sorting_form">Sort By</span>
+	</div>
+	{% render_field sorting_form.key class="custom-select" %}
+	{% render_field sorting_form.order class="custom-select" %}
+      </div>
+      {% for error in sorting_form.key.errors %}
+      <div class="custom-invalid-feedback">
+	{{ error }}
+      </div>
+      {% endfor %}
+    </div>
+
     <div class="card-deck mb-3">
-        <div class="col">
-            {% for valrun in myruns %}
-                <div class="card mb-4 mx-0 box-shadow" id="result_row_{{ valrun.id }}">
-                    <div class="card-header">
-                        <h5 class="my-0" style="float: left">
-                            {% if valrun.expiry_date %}
-                                {% if valrun.is_near_expiry %}
-                                    <span class="fas fa-exclamation-triangle" title="This validation will SOON be automatically removed during cleanup on {{ valrun.expiry_date }}."></span>
+	<div class="col">
+	    {% for valrun in myruns %}
+		<div class="card mb-4 mx-0 box-shadow" id="result_row_{{ valrun.id }}">
+		    <div class="card-header">
+			<h5 class="my-0" style="float: left">
+			    {% if valrun.expiry_date %}
+				{% if valrun.is_near_expiry %}
+				    <span class="fas fa-exclamation-triangle" title="This validation will SOON be automatically removed during cleanup on {{ valrun.expiry_date }}."></span>
                                 {% else %}
                                     <span class="fas fa-calendar-alt" title="This validation will be automatically removed during cleanup on {{ valrun.expiry_date }}."></span>
                                 {% endif %}
