--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -1025,11 +1025,11 @@
       // set the appropriate date
       $(this).val(year+'-'+month+'-'+day);
     }
-    
+
     var today = new Date()
     var todays_year = today.getFullYear()
-    var today_str = todays_year + '-' + (today.getMonth()+1) + '-' + today.getDate()    
-        
+    var today_str = todays_year + '-' + (today.getMonth()+1) + '-' + today.getDate()
+
     var dates_settings = {
       dateFormat:'yy-mm-dd',
       changeMonth: true,
@@ -1052,5 +1052,15 @@
      });
     </script>
 
+    <script type="text/javascript">
+      // console.log('{{if_run_exists}}')
+      if ('{{if_run_exists}}' == 'True'){
+        console.log('Yeah!')
+        if (!confirm('There exists a published validation with all the settings you introduced. You can use existing results or run your validation anyway.')) {
+               console.log('yes, please')
+        }
+      }
+
+    </script>
 
 {% endblock %}
