--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -523,7 +523,11 @@
                     <!-- this is a hidden field so it is possible to count how many times the Validate button was clicked -->
                     <input id='click-counter' name='click-counter' type='hidden' value=1>
                     <!-- this is an area triggered as a dialog window for informing user that there is a validation with given settings -->
-                    <div id="validate-confirm" title="Do you want to use an existing validation?"></div>
+                    <div id="validate-confirm" title="Do you want to use an existing validation?">
+                      There exists a published validation with exactly the same settings. <br>
+                      You can run your own validation and wait for the results or you can use the existing one. <br>
+                      What would you like to do?
+                    </div>
                 </div>
             {% endif %}
         {% endwith %}
@@ -1064,21 +1068,23 @@
       }
 
       if ('{{if_run_exists}}' == 'True'){
-        console.log('Yeah!')
         $('#validate-confirm').dialog({
           resizable: false,
           height: "auto",
-          width: 400,
+          width: "auto",
           modal: true,
+          classes: {
+
+          },
           buttons: {
+            'Use the existing one': function() {
+              $( this ).dialog( "close" );
+            },
             "Run your own validation": function() {
               $('#validate-run').click(set_counter).click();
               $( this ).dialog( "close" );
-
-            },
-            'Use the existing one': function() {
-              $( this ).dialog( "close" );
             }
+
           }
         });
       }
