--- a/validator/templates/validator/published_results.html
+++ b/validator/templates/validator/published_results.html
@@ -13,6 +13,24 @@
         </p>
     </div>
 
+    <form method="get">
+    <div class="mb-3">
+      <div class="input-group">
+	<div class="input-group-prepend">
+	  <span class="input-group-text addon-w" id="sorting_form">Sort By</span>
+	</div>
+	{% render_field sorting_form.sort_key class="custom-select" %}
+	{% render_field sorting_form.sort_order class="custom-select" %}
+	<input class="btn btn-primary" type="submit" value="Apply">
+      </div>
+      {% for error in sorting_form.key.errors %}
+      <div class="custom-invalid-feedback">
+	{{ error }}
+      </div>
+      {% endfor %}
+    </div>
+    </form>
+
     <div class="card-deck mb-3">
         <div class="col">
             {% for valrun in validations %}
