--- a/validator/static/css/service.css
+++ b/validator/static/css/service.css
@@ -136,7 +136,6 @@ html {
      width: 0.1rem;
      margin-right: 0.000001rem;
      padding: .0000001rem;
-     display:none;
      color: black;
 }
 .tab-minus:hover {
@@ -180,5 +179,8 @@ div.plot_div {
     font-size: 1em;
 }
 #validate-confirm {
+  display: none;
+}
+.hide_element {
   display: none;
 }
