--- a/validator/static/css/service.css
+++ b/validator/static/css/service.css
@@ -136,7 +136,6 @@ html {
      width: 0.1rem;
      margin-right: 0.000001rem;
      padding: .0000001rem;
-     display:none;
      color: black;
 }
 .tab-minus:hover {
@@ -179,4 +178,14 @@ div.plot_div {
 #users_list optgroup {
     font-size: 1em;
 }
-
+#validate-confirm {
+  display: none;
+  color: #00212e;
+}
+div.ui-dialog-titlebar{
+  background-color: #00AAE3;
+  color: white;
+}
+.hide_element {
+  display: none;
+}
