--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -45,10 +45,10 @@
                                     <nav>
                                         <div class="nav nav-tabs" id="nav-tab" role="tablist">
                                             {% for dc_form in dc_formset %}
-                                                <a class="dc_form_link nav-item nav-link {% if forloop.first %}active{% endif %}" id="id_{{ dc_form.prefix }}-tab" data-toggle="tab" href="#id_{{ dc_form.prefix }}"  aria-controls="id_{{ dc_form.prefix }}" {% if forloop.first %}aria-selected="true"{% endif %} onclick="shiftTheButton(event, '#remove_dc_form')">Dataset</a>
+                                                <a class="dc_form_link nav-item nav-link {% if forloop.last %}active{% endif %}" id="id_{{ dc_form.prefix }}-tab" data-toggle="tab" href="#id_{{ dc_form.prefix }}"  aria-controls="id_{{ dc_form.prefix }}" aria-selected="{% if forloop.last %}true{%else%}false{% endif %}" onclick="shiftTheButton(event, '#remove_dc_form')">Dataset</a>
                                             {% endfor %}
-                                                <a id="add_dc_form" class="tab-plus btn btn-primary" href="javascript:void(0)"><span class="fas fa-plus" title="Add another dataset"></span></a>
-                                                <a id="remove_dc_form" class="tab-minus" href="javascript:void(0)" title="Remove active dataset">&times;</a>
+                                                <a id="add_dc_form" value='{{ dc.formset|length }}' class="tab-plus btn btn-primary {%if dc_formset|length == dc_formset.max_num%}hide_element{%endif%}" href="javascript:void(0)"><span class="fas fa-plus" title="Add another dataset"></span></a>
+                                                <a id="remove_dc_form" class="tab-minus {%if dc_formset|length == dc_formset.min_num%}hide_element{%endif%}"  href="javascript:void(0)" title="Remove active dataset">&times;</a>
                                         </div>
                                     </nav>
 
@@ -57,7 +57,7 @@
                                     <div id="dc_form_container" class="card-body tab-content">
 
                                         {% for dc_form in dc_formset.forms %}
-                                            <div class="dc_form tab-pane fade {% if forloop.first %}show active{% endif %}" id="id_{{ dc_form.prefix }}" role="tabpanel" aria-labelledby="id_{{ dc_form.prefix }}-tab">
+                                            <div class="dc_form tab-pane fade {% if forloop.last %}show active{% endif %}" id="id_{{ dc_form.prefix }}" role="tabpanel" aria-labelledby="id_{{ dc_form.prefix }}-tab">
                                                 <div class="mb-3">
                                                     <div class="input-group">
                                                         <div class="input-group-prepend">
@@ -519,7 +519,16 @@
                     {% endfor %}
 
 
-                    <input class="btn btn-lg btn-primary mb-3" type="submit" value="&#9658; Validate">
+                    <input id='validate-run' class="btn btn-lg btn-primary mb-3" type="submit" value="&#9658; Validate">
+                    <!-- this is a hidden field so it is possible to count how many times the Validate button was clicked -->
+                    <input id='click-counter' name='click-counter' type='hidden' value=1>
+                    <!-- this is an area triggered as a dialog window for informing user that there is a validation with given settings -->
+                    <div id="validate-confirm" title="Would you like to use an existing validation?" data-url="{% if val_id %}{% url 'result' val_id %} {% endif%}">
+                      There exists a published validation with exactly the same settings. <br>
+                      You can run your own validation and wait for the results or you can use the existing one.<br>
+                      You can also close this window and change some settings.<br>
+                      What would you like to do?
+                    </div>
                 </div>
             {% endif %}
         {% endwith %}
@@ -687,7 +696,6 @@
                     $(filter_widget).html(return_data['filters']);
                     $(param_filter_widget).html(return_data['paramfilters']);
 
-                    console.log(datasetId, datasetName)
 
                     if(datasetName=='ISMN'){
                         var default_value = $(version_widget).find('option')[0].value
@@ -695,12 +703,9 @@
                     } else{
                         $('#id_target_hidden_input_version').val('')
                     }
-
                 }
             });
-
         }
-
 
 
         function change_tab_name() {
@@ -973,13 +978,14 @@
             removeTab('.dc_form', '.dc_form_link', 'datasets',  $('#add_dc_form'), $(this));
         });
 
+        function set_after(first_element_selector, second_element_selector){
+          $(first_element_selector).after($(second_element_selector))
+        }
+
         function shiftTheButton(obj, buttonSelector){
             var currentObject = obj.currentTarget
-            var removeButton = $(buttonSelector)
-            $(currentObject).after(removeButton)
-
-
-}
+            set_after(currentObject, buttonSelector)
+          }
 
     </script>
 
@@ -1025,11 +1031,11 @@
       // set the appropriate date
       $(this).val(year+'-'+month+'-'+day);
     }
-    
+
     var today = new Date()
     var todays_year = today.getFullYear()
-    var today_str = todays_year + '-' + (today.getMonth()+1) + '-' + today.getDate()    
-        
+    var today_str = todays_year + '-' + (today.getMonth()+1) + '-' + today.getDate()
+
     var dates_settings = {
       dateFormat:'yy-mm-dd',
       changeMonth: true,
@@ -1052,5 +1058,37 @@
      });
     </script>
 
+    <script type="text/javascript">
+
+      function set_counter(){
+        var counter = parseInt($('#click-counter').val())
+        $('#click-counter').val(counter+1)
+      }
+      // this code is added so the tab closing button renders in an appropriate
+      // place; it wasn't an issue before, because only one tab is rendered by default
+      if($('#id_datasets-TOTAL_FORMS') >= $('#id_datasets-MIN_NUM_FORMS')){
+        set_after('.dc_form_link.nav-item.nav-link.active', '#remove_dc_form')
+      }
+
+      if ('{{if_run_exists}}' == 'True'){
+        var url_to_go = $('#validate-confirm').attr('data-url')
+        $('#validate-confirm').dialog({
+          resizable: false,
+          height: "auto",
+          width: "auto",
+          modal: true,
+          buttons: {
+            'Use the existing one': function() {
+              window.location.href = url_to_go
+            },
+            "Run your own validation": function() {
+              $('#validate-run').click(set_counter).click();
+              $( this ).dialog( "close" );
+            }
+          }
+        });
+      }
+
+    </script>
 
 {% endblock %}
