--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -4,6 +4,95 @@
 {% block content %}
 
 <div class="container">
+  <div class="container text-center mb-5 mt-4" style="max-width: 40rem;">
+      <h1 class="jumbotron-heading">Attached validations</h1>
+  </div>
+  <div class="card-deck mb-3">
+      <div class="col">
+          {% for valrun in myruns %}
+              <div class="card mb-4 mx-0 box-shadow" id="attached_result_row_{{ valrun.id }}">
+                  <div class="card-header">
+                      <h5 class="my-0" style="float: left">
+                          {% if valrun.expiry_date %}
+                              {% if valrun.is_near_expiry %}
+                                  <span class="fas fa-exclamation-triangle" title="This validation will SOON be automatically removed during cleanup on {{ valrun.expiry_date }}."></span>
+                              {% else %}
+                                  <span class="fas fa-calendar-alt" title="This validation will be automatically removed during cleanup on {{ valrun.expiry_date }}."></span>
+                              {% endif %}
+                          {% else %}
+                              {% if valrun.progress == -1 %}
+                                  <span class="fas fa-ban" title="This validation was cancelled."></span>
+                              {% elif not valrun.end_time %}
+                                  <span class="fas fa-running" title="This validation is still running."></span>
+                              {% endif %}
+                              {% if valrun.doi %}
+                                  <a class="doilink" target="_blank" href="{{doi_prefix}}{{ valrun.doi }}"><span class="fas fa-book" title="This result has been published with zenodo. It will NOT be automatically removed during cleanup."></span></a>
+                              {% elif valrun.is_archived %}
+                                  <span class="fas fa-archive" title="This validation has been archived. It will NOT be automatically removed during cleanup."></span>
+                              {% endif %}
+                          {% endif %}
+                          <span class=" font-weight-normal">Started:</span> {{ valrun.start_time }}
+                      </h5>
+                      <h5 class="my-0" style="float: right">
+                              <span class=" font-weight-normal">Name:</span>
+                      {% if valrun.name_tag %}
+                              <span class="font-weight-normal no_edit_name"> {{ valrun.name_tag }} </span>
+                      {% endif %}
+
+                      <span class="no_name_change_info fas fa-question-circle help-icon" title="Validation has been attached to your list. There is no possibility of changing its name."> </span>
+                      </h5>
+
+                  </div>
+                  <div class="card-body" style="padding: 0.5rem 1.25rem;">
+                      <div class="row" style="justify-content: space-between;">
+
+                          <div class="col-sm-4">
+                              <strong>Data:</strong><br/>
+                              {% for dc in valrun.dataset_configurations.all %}
+                                  {% if dc.id != valrun.reference_configuration.id %}
+                                      {{ dc.dataset.pretty_name }},
+                                      {{ dc.version.pretty_name }},
+                                      {{ dc.variable.pretty_name }}<br/>
+                                  {% endif %}
+                              {% endfor %}
+                          </div>
+
+                          <div class="col-sm-4">
+                              <strong>Reference:</strong><br/>
+                              {{ valrun.reference_configuration.dataset.pretty_name }},
+                              {{ valrun.reference_configuration.version.pretty_name }},
+                              {{ valrun.reference_configuration.variable.pretty_name }}
+                          </div>
+
+                          <div class="col-sm" style="max-width: 7rem;">
+                              <strong>Status:</strong><br/>
+                              {% if valrun.progress == 0 and valrun.end_time == null %} Scheduled
+                              {% elif valrun.progress == 100 and valrun.end_time %} Done
+                              {% elif valrun.progress == -1 %} Cancelled
+                              {% elif valrun.end_time != null %} ERROR
+                              {% else %} Running ({{ valrun.progress }}&#37;)
+                              {% endif %}
+                          </div>
+
+                          <div class="col-sm" style="text-align: right; max-width: 8.75rem">
+                              <a class="btn btn-sm btn-primary btn-action" href="{% url 'result' valrun.id %}" title="View results"><span class="fas fa-folder-open"></span></a>
+                              {% if valrun.progress > -1 and valrun.progress < 100 and valrun.end_time == null %}
+                              <button class="btn btn-sm btn-primary btn-action" title="Cancel validation" onclick="ajax_stop_validation('{{ valrun.id }}')"><span class="fas fa-stop"></span></button>
+                              {% endif %}
+                              {% if valrun.end_time %}
+                                  {% if valrun.output_file %}
+                                  <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_dir_url }}graphs.zip" title="Download all graphs"><span class="fas fa-download"></span></a>
+                                  <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_file.url }}" title="Download NetCDF"><span class="fas fa-file-download"></span></a>
+                              {% endif %}
+                              {% endif %}
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          {% endfor %}
+          </div>
+      </div>
+
 
     <div class="container text-center mb-5 mt-4" style="max-width: 40rem;">
         <h1 class="jumbotron-heading">My validations</h1>
