--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -9,7 +9,7 @@
   </div>
   <div class="card-deck mb-3">
       <div class="col">
-          {% for valrun in myruns %}
+          {% for valrun in copied_runs %}
               <div class="card mb-4 mx-0 box-shadow" id="attached_result_row_{{ valrun.id }}">
                   <div class="card-header">
                       <h5 class="my-0" style="float: left">
@@ -92,6 +92,40 @@
           {% endfor %}
           </div>
       </div>
+
+      {% if copied_runs.has_other_pages %}
+          <nav aria-label="pagination">
+              <ul class="pagination justify-content-center">
+                  <li class="page-item {% if copied_runs.number == 1 %}disabled{%endif%}">
+                      <a class="page-link" href="?page=1" aria-label="First">
+                      <span aria-hidden="true" class="fas fa-angle-double-left"></span>
+                      <span class="sr-only">First</span></a>
+                  </li>
+                  <li class="page-item {% if not copied_runs.has_previous %}disabled{%endif%}">
+                      <a class="page-link" href="?{% if copied_runs.has_previous %}page={{ copied_runs.previous_page_number }}{% endif %}" aria-label="Previous">
+                      <span aria-hidden="true" class="fas fa-angle-left"></span>
+                      <span class="sr-only">Previous</span></a>
+                  </li>
+                  {% for i in copied_runs.paginator.page_range %}
+                      {% if i <= copied_runs.number|add:8 and i >= copied_runs.number|add:-8 %}
+                          <li class="page-item {% if copied_runs.number == i %}active{% endif %}">
+                              <a class="page-link" href="?page={{ i }}">{{ i }} {% if copied_runs.number == i %}<span class="sr-only">(current)</span>{% endif %}</a>
+                          </li>
+                      {% endif %}
+                  {% endfor %}
+                  <li class="page-item {% if not copied_runs.has_next %}disabled{% endif %}">
+                      <a class="page-link" href="?{% if copied_runs.has_next %}page={{ copied_runs.next_page_number }}{% endif %}" aria-label="Next">
+                      <span aria-hidden="true" class="fas fa-angle-right"></span>
+                      <span class="sr-only">Next</span></a>
+                  </li>
+                  <li class="page-item {% if copied_runs.number == copied_runs.paginator.num_pages %}disabled{% endif %}">
+                      <a class="page-link" href="?page={{ copied_runs.paginator.num_pages }}" aria-label="Next">
+                      <span aria-hidden="true" class="fas fa-angle-double-right"></span>
+                      <span class="sr-only">Next</span></a>
+                  </li>
+              </ul>
+          </nav>
+      {% endif %}
 
 
     <div class="container text-center mb-5 mt-4" style="max-width: 40rem;">
