--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -20,8 +20,8 @@
                             <a class="btn btn-sm btn-primary btn-action" href="{% url 'result' valrun.id %}" title="View results"><span class="fas fa-folder-open"></span></a>
                             {% if valrun.end_time %}
                                 {% if valrun.output_file %}
-<!--                                  <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_dir_url }}graphs.zip" title="Download all graphs"><span class="fas fa-download"></span></a>-->
-<!--                                  <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_file.url }}" title="Download NetCDF"><span class="fas fa-file-download"></span></a>-->
+                                  <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_dir_url }}graphs.zip" title="Download all graphs"><span class="fas fa-download"></span></a>
+                                  <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_file.url }}" title="Download NetCDF"><span class="fas fa-file-download"></span></a>
                                   <button class="btn btn-sm btn-primary btn-action" title="Deattach this validation from your list" onclick="ajax_remove_copied_validation('{{ valrun.id }}', false)"><span class="fas fa-times"></span></button>
                                 {% endif %}
                             {% endif %}
@@ -30,6 +30,8 @@
               {% endfor %}
               </div>
     </div>
+        {% endif %}
+</div>
         {% if copied_runs.has_other_pages %}
             <nav aria-label="pagination">
                 <ul class="pagination justify-content-center">
@@ -63,7 +65,7 @@
                 </ul>
             </nav>
         {% endif %}
-    {% endif %}
+
 
     <div class="container text-center mb-5 mt-4" style="max-width: 40rem;">
         <h1 class="jumbotron-heading">My validations</h1>
