--- a/validator/templates/validator/published_results.html
+++ b/validator/templates/validator/published_results.html
@@ -52,7 +52,7 @@
 
                             <div class="col-sm" style="text-align: right; max-width: 6.8rem;">
                                 <a class="btn btn-sm btn-primary btn-action" href="{% url 'result' valrun.id %}" title="View results"><span class="fas fa-folder-open"></span></a>
-                                <a class="btn btn-sm btn-primary btn-action" href="#" onclick="ajax_copy_validation('{{ valrun.id}}')" title="Add this validation to your list"><span class="fas fa-plus"></span></a>
+                                <a class="btn btn-sm btn-primary btn-action" href="#" onclick="ajax_copy_validation('{{ valrun.id}}')" title="Attach this validation to your list"><span class="fas fa-plus"></span></a>
                             </div>
 
                         </div>
