attach button added to the result page

--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -30,7 +30,10 @@
                         <button class="btn btn-sm btn-primary btn-action d-none save_name_btn result_page" title="Save Name" onclick="ajax_save_name(event, '{{ val.id }}')"><span class="fas fa-save"></span></button>
                         <button class="btn btn-sm btn-primary btn-action d-none cancel_editing_btn result_page" title="Cancel" onclick="cancel_editing(event)"><span class="fas fa-ban"></span></button>
                         {% else %}
-                        <span class="my-0 font-weight-normal no_edit_name">{% if val.name_tag %}{{val.name_tag}}{% endif %} <span class="no_name_change_info fas fa-question-circle help-icon" title="Validation has been published. There is no possibility of changing its name."> </span> </span>
+                        <span class="my-0 font-weight-normal no_edit_name">{% if val.name_tag %}{{val.name_tag}}{% endif %}
+                            <span class="no_name_change_info fas fa-question-circle help-icon" title="Validation has been published. There is no possibility of changing its name."></span>
+                        </span>
+
                         {% endif %}
                     </h4>
                 </div>
@@ -170,6 +173,10 @@
                                 Publishing in progress...
                             </div>
                         {% endif %}
+                    {% else %}
+                    <div style="float: right;" class="patchButtonGroup">
+                        <button class="btn btn-sm btn-primary" title="Attach this validation to your list" onclick="ajax_copy_validation('{{ valrun.id}}')"><span class="fas fa-plus"></span> Attach </button>
+                    </div>
                     {% endif %}
                 </div>
             </div>
