Qa4sm 416 list of published runs (#120)
* Revert "updating my fork"

* Updating my fork (#18)

* Update variables.json (#84)

Geophysical range for ESA CCI active changed to 0-100 instead of 0-1.

* Test master (#108)

* Add option to deactivate scaling (#98)

Co-authored-by: Wolfgang Preimesberger <wolfgang.preimesberger@geo.tuwien.ac.at>

* Bug fixing (#99)

* Update versions.json

* Update scheme.css

some styling added so that filter descriptions for smos don't cause a shift in the question mark sign

* Update filter_checkbox_option.html

Comment removed

* Ismn dialog window (#100)

* Qa4sm 389 ismn dialog window (#80)

* Revert "updating my fork"

* a bug fixed - default depth values were passed to the database instead of the ones chosen by user

* changed id of a checkbox for parametrized filters and the regular id passed into a hidden field, so that regardless it's disabled filter id is still passed to the database

* label moved before the hidden input, so that styling from css file works properly

* bug fixed: scaling data restored after removal datasets

* necessary filies added

* changed files added

* loading model ISMNNetworks enabled

* improved way of taking dataset name

* Update ismn_dialog.html

toggleISMNContinent function removed from depth selection

Co-authored-by: sheenaze <tercjak@awst>

* Update and rename 0021_ismnnetworks.py to 0023_ismnnetworks.py

Some cleansing in migration directory so that there were no conflicts

* 0022_auto_20201110_1524 added

migration file from 'no scaling task'

* Delete 0022_merge_20201001_0821.py

Don't need this merge anymore

Co-authored-by: sheenaze <tercjak@awst>

* All data sets on both sides (#101)

* Qa4sm 391 allowing all datasets (#81)

* Revert "updating my fork"

* a bug fixed - default depth values were passed to the database instead of the ones chosen by user

* changed id of a checkbox for parametrized filters and the r

--- a/validator/static/css/service.css
+++ b/validator/static/css/service.css
@@ -189,3 +189,16 @@ div.ui-dialog-titlebar{
 .hide_element {
   display: none;
 }
+
+.att_val_container{
+  background-color: white;
+  color: black;
+  padding: 0.3em 0.3em 0.3em 0.3em;
+}
+.att_val_container h5.my-0{
+  float: left;
+  padding-top: 0.3em;
+}
+.att_val_container div.col-sm{
+  text-align: right;
+}
