--- a/validator/templates/validator/published_results.html
+++ b/validator/templates/validator/published_results.html
@@ -52,6 +52,13 @@
 
                             <div class="col-sm" style="text-align: right; max-width: 6.8rem;">
                                 <a class="btn btn-sm btn-primary btn-action" href="{% url 'result' valrun.id %}" title="View results"><span class="fas fa-folder-open"></span></a>
+                                {% if current_user %}
+                                    {% if valrun not in copied_runs %}
+                                        <button class="btn btn-sm btn-primary btn-action" title="Attach this validation to your list" onclick="ajax_copy_validation('{{ valrun.id}}')"><span class="fas fa-plus"></span></button>
+                                    {% else %}
+                                        <button class="btn btn-sm btn-primary btn-action" title="Detach this validation from your list" onclick="ajax_remove_copied_validation('{{ valrun.id }}', false)"><span class="fas fa-times"></span></button>
+                                    {% endif %}
+                                {% endif %}
                             </div>
 
                         </div>
@@ -98,4 +105,10 @@
 {% endblock %}
 
 {% block javascript %}
+<script type="text/javascript">
+    csrf_token = '{{csrf_token}}';
+    result_url = "{% url 'result' '00000000-0000-0000-0000-000000000000' %}";
+    stop_validation_url = "{% url 'stop_validation' '00000000-0000-0000-0000-000000000000' %}";
+</script>
+<script src="{% static 'js/results_buttons.js' %}"></script>
 {% endblock %}
